--- a/src/Components/Product/Product.module.css
+++ b/src/Components/Product/Product.module.css
@@ -111,3 +111,44 @@ width: 250px;
   align-items: center;
   padding: 10px 0px;
 }
+
+.product_flexed {
+    
+    height: auto;
+    display: flex;
+    gap: 50px;
+    width: 100%;        /* ✅ expands full width */
+  max-width: 100%;    /* ✅ override the 250px max-width */
+  box-shadow: none;
+    display: flex;
+ 
+ 
+
+    
+}
+
+.product_flexed h3 {
+    padding: 20px 0px;
+}
+
+.product_flexed .button {
+    display: block;
+    position: static;
+    width: 150px;
+    margin-right: 40px;
+}
+
+.product_flexed {
+    height: 50vh;
+}
+.product_flexed img {
+    width: 380px !important;
+    height: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .product_flexed {
+        display: flex;
+        flex-direction: column;
+    }
+}
